@@ -1,0 +1,41 @@
+# please keep this list sorted alphabetically
+ar
+bg
+ca
+cs
+da
+de
+dz
+el
+en_CA 
+en_GB
+es 
+fi 
+fr
+gl 
+gu 
+hu 
+it 
+ja 
+ko 
+lt 
+mk 
+nb 
+ne 
+nl 
+oc 
+pa 
+pl 
+pt
+pt_BR 
+ru
+rw
+sk 
+sl 
+sq
+sv
+tr 
+uk
+vi zh_CN 
+zh_TW
+
