@@ -1,3 +1,7 @@
+2008-02-27  Jaap Haitsma  <jaap@haitsma.org>
+
+	* LINGUAS: Do translations via LINGUAS file
+
 2008-02-22  Daniel Nylander <po@danielnylander.se>
 
         * sv.po: Updated Swedish translation.
