@@ -1,3 +1,8 @@
+2008-02-27  Jaap Haitsma  <jaap@haitsma.org>
+
+	Major restructuring of directory structure. Fixes bug #518472
+	Use po/LINGUAS for translations
+
 === gnome-user-share 0.22 ===
 
 2008-02-24  Bastien Nocera  <hadess@hadess.net>
